--- a/memo/section2.html
+++ b/memo/section2.html
@@ -3,7 +3,18 @@
 
 <body>
 
-  <h2>Dockerを理解する</h2>
+  <h1>Dockerを理解する</h1>
+
+  <h2>Dockerとは何か</h2>
+  <ul>
+    <li>コンテナ型仮装環境を作成、実行、管理するためのプラットフォーム</li>
+    <li>Dockerのソフトウェアを使って素早くコンテナ起動し、様々なアプリケーションを実行することができる</li>
+    <li>異なる環境(PCやサーバ)で簡単に同じ仮装環境を再現できる</li>
+    <li>DockerのソフトウェアはGo言語で書かれている</li>
+  </ul>
+
+
+
 
 
 </body>
