feat: 用語追加など

--- a/memo/glossary.html
+++ b/memo/glossary.html
@@ -57,20 +57,59 @@
     <dt>Node.js</dt>
     <dd>Javascriptの実行環境で、サーバー上でJavascriptのプログラムを実行することができる。</dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>ホストOS</dt>
+    <dd>仮想化において、仮想サーバーを起動させる側のOSのこと。<br />
+      ホストOS上に仮想化のソフトウェアをインストールすることで、仮想マシンを作成して複数の仮想環境を起動することができる。
+    </dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>ゲストOS</dt>
+    <dd>仮想化において、ホストOS上に作成された仮想マシン上で動作するOSのこと。</dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>Virtual Machine（VM）</dt>
+    <dd>仮想環境のことをVirtual Machineや略してVMと呼ぶ。<br />
+      一般的にはホスト型仮想化の仮想マシンのことを指す。
+    </dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>ホスト型仮想化</dt>
+    <dd>ホストOSにハイパーバイザーと呼ばれる仮想化の機能を用意して行う仮想化のことをホスト型仮想化と言う。<br />
+      ハイパーバイザーの機能を提供するソフトウェアとしては、Virtual Box、Hyper-V、VMwareなどがある。<br />
+      ホストOSに依存せずに仮想マシンに好きなOSをインストールできる点や、仮想マシン間の分離レベルが高い点などがコンテナ仮想化と異なる。
+    </dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>コンテナ型仮想化</dt>
+    <dd>Dockerといったコンテナ仮想化を行うソフトウェアを用いて行う仮想化をコンテナ型仮想化と言う。<br />
+      Dockerの場合はDockerエンジンによってコンテナの作成、削除などの管理が行われる。<br />
+      ホスト型とは異なり、ゲストOSというものはなく、ホストOSのカーネルを共有してアプリケーションが実行される。
+    </dd>
+
+    <dt>ハイパーバイザー</dt>
+    <dd>ホスト型仮想化の仮想マシンを管理するための機能を提供するもの。<br />
+      ホストOSとゲストOSの間を仲介する形でハイパーバイザーが機能する。
+    </dd>
+
+    <dt>Dockerエンジン</dt>
+    <dd>Dockerにおいてコンテナ型仮想化を実現するためのコアとなる機能を持った部分。<br />
+      Dockerエンジンによってコンテナ作成などの機能が提供される。
+    </dd>
+
+    <dt>オーバーヘッド</dt>
+    <dd>コンピュータで何らかの処理を行う際に、その処理を行うために余計に費やされるシステムへかかる負荷や処理時間などのことを言う。</dd>
+
+    <dt>ミドルウェア</dt>
+    <dd>コンピュータの基本的な制御を行うオペレーティングシステムと、各業務処理を行うアプリケーションソフトウェアとの中間に入るソフトウェアのこと。<br />
+      Webアプリケーションでは、DBサーバーやWebサーバー、アプリケーションサーバーの機能を提供するミドルウェアなどが使われる。
+    </dd>
+
+    <dt>カーネル</dt>
+    <dd>OSのコアとなる部分。<br />
+      ハードディスクやメモリーなど、コンピューターリソースの管理や、プログラムの実行プロセスへのリソースの割り当てなどを行う。
+    </dd>
+
+    <dt>パッケージ</dt>
+    <dd>特定の機能を提供するために、必要なプログラムをまとめたもの。<br />
+      Linuxサーバーなどでは、公開されている様々なパッケージをインストールすることで、サーバーとしての機能を追加することができる。<br />
+      またプログラミングでは、他者が公開しているパッケージを再利用することで、全てを自前で作成せずに部分的にパッケージの機能を利用してアプリケーションを作成することができる。
+    </dd>
 
     <dt></dt>
     <dd></dd>
