--- a/memo/section2.html
+++ b/memo/section2.html
@@ -13,9 +13,22 @@
     <li>DockerのソフトウェアはGo言語で書かれている</li>
   </ul>
 
+  <h2>Dockerのユースケース</h2>
+  <ul>
+    <li>アプリケーション開発環境</li>
+    <li>検証環境、本番環境</li>
+    <li>WEBサーバ、DBサーバなどの構築</li>
+    <li>各種プログラミング言語の実行環境</li>
+    <li>様々なミドルウェアの環境構築</li>
+  </ul>
 
-
-
+  <h2>Dockerを使うメリット</h2>
+  <ul>
+    <li>プログラムの実行環境を素早く用意できる</li>
+    <li>再現性のある環境を用意できる。</li>
+    <li>設定ファイルを共有することで開発メンバー間で同じ環境を立ち上げることができる</li>
+    <li>PCに必要なソフトなどを入れなくて良いので、PCの環境を汚さずに済む</li>
+  </ul>
 
 </body>
 
