--- a/memo/section2.html
+++ b/memo/section2.html
@@ -30,6 +30,22 @@
     <li>PCに必要なソフトなどを入れなくて良いので、PCの環境を汚さずに済む</li>
   </ul>
 
+  <h2>ホスト型仮想化とコンテナ型仮想化の違い</h2>
+  <h3>ホスト型仮想化</h3>
+  <p>>仮想マシン上にゲストOSを動作させる。<br />
+    ホストOS上にVM（仮想マシン）を動作させるために、ハイパーバイザーが間に入って動作している。<br />
+    ホスト型仮想化は物理サーバーにOSをインストールしたものに近い環境を作れる代わりに、仮想マシンを作るためのイメージサイズが大きい。<br />
+    イメージサイズが大きいため、VMの作成やイメージの移動には時間がかかる。<br />
+    また、通常のOSと同様に起動に時間がかかる。
+  </p>
+  <h3>コンテナ型仮想化</h3>
+  <p>Dokerコンテナの作成、起動、停止、削除などDockerの操作はDockerEngineを介して実行される。<br />
+    Dockerの利用者はdockerコマンドを使ってDockerEngineに指示を出す。<br />
+    DockerEngineはDockerDesktopなどのDockerクライアントソフトウェアをインストールすると利用できる。<br />
+    DockerEngineは常駐型のプログラムのため、Dockerを使用する際に起動しておく必要がある。<br />
+    <strong>コンテナにはゲストOSは無く</strong>、ホストOSのコアであるカーネルを使用して実行されるため、軽量に動作する。<br />
+  </p>
+
 </body>
 
 </html>
