feat: section2のメモ完了

--- a/memo/section2.html
+++ b/memo/section2.html
@@ -46,6 +46,40 @@
     <strong>コンテナにはゲストOSは無く</strong>、ホストOSのコアであるカーネルを使用して実行されるため、軽量に動作する。<br />
   </p>
 
+  <h2>ホスト型仮想化とコンテナ型仮想化を比較して見るメリット・デメリット</h2>
+
+  <h3>仮想化のオーバーヘッド</h3>
+  <dl>
+    <dt>ホスト型仮想化</dt>
+    <dd>CPUやメモリの使用率などリソースの面でオーバーヘッドが多く、起動や停止に時間がかかる。</dd>
+    <dt>コンテナ型仮想化</dt>
+    <dd>コンテナはアプリケーション実行に必要なものだけを含み、ホストOSのカーネルを使用するため、動作が速くリソースの使用率も少ない。</dd>
+  </dl>
+
+  <h3>アプリケーション実行の再現性</h3>
+  <dl>
+    <dt>ホスト型仮想化</dt>
+    <dd>仮想マシンの環境の違いによりアプリケーションが動作しなくなることが稀にある。</dd>
+    <dt>コンテナ型仮想化</dt>
+    <dd>特定のアプリケーションを動作させるために必要なものは、Dockerイメージにまとまっており、同じDockerイメージからコンテナを起動する限り、環境が変わっても同様に動作する。</dd>
+  </dl>
+
+  <h3>OSの自由度</h3>
+  <dl>
+    <dt>ホスト型仮想化</dt>
+    <dd>仮想マシン上で任意のOSを動作できる。</dd>
+    <dt>コンテナ型仮想化</dt>
+    <dd>コンテナはホストOSのカーネルを使用して動作するので、Windows上で直接Linuxコンテナを動作できない。逆も同様。</dd>
+  </dl>
+
+  <h3>分離レベル</h3>
+  <dl>
+    <dt>ホスト型仮想化</dt>
+    <dd>ハードウェアレベルで仮想化されており、ホストOSや仮想マシン間の分離レベルが高く、それぞれ影響を受けづらい。</dd>
+    <dt>コンテナ型仮想化</dt>
+    <dd>OSの機能を使用した仮想化は、ホスト型仮想化に比べて分離レベルは低い。</dd>
+  </dl>
+
 </body>
 
 </html>
