--- a/memo/glossary.html
+++ b/memo/glossary.html
@@ -111,6 +111,21 @@
       またプログラミングでは、他者が公開しているパッケージを再利用することで、全てを自前で作成せずに部分的にパッケージの機能を利用してアプリケーションを作成することができる。
     </dd>
 
+    <dt>Dockerデーモン</dt>
+    <dd>Dockerの常駐型プログラムで、Dockerコンテナの作成やDockerイメージの作成などDockerに対する操作はこのDockerデーモンが受け取り、実際の処理を行う。<br />
+      Docker DesktopやDocker ToolboxといったソフトをインストールすることでDockerデーモンが起動する。<br />
+      Dockerデーモンが起動していないとDockerに対する操作を受け取れないためエラーになる。<br />
+      そのため、もし停止している場合には事前に起動しておく必要がある。
+    </dd>
+
+    <dt>Dockerクライアント</dt>
+    <dd>Dockerの利用者がDockerに指示を出すためのクライアントソフトのこと。<br />
+      一般的にはdockerコマンドを用いてDockerに指示を出す。
+    </dd>
+
+    <dt></dt>
+    <dd></dd>
+
     <dt></dt>
     <dd></dd>
 
