--- a/memo/glossary.html
+++ b/memo/glossary.html
@@ -123,11 +123,17 @@
       一般的にはdockerコマンドを用いてDockerに指示を出す。
     </dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>バインドマウント</dt>
+    <dd>DockerにおいてホストOS（Dockerデーモンが動作しているOS）上のファイルをコンテナに共有する機能をバインドマウントと言う。<br />
+      ソフトウェアの開発時など、PCでソースコードを変更してDockerコンテナ上で実行したい場合などに、ソースコードのあるフォルダをコンテナにバインドマウントしてプログラムを実行するといった使い方がよくされる。
+    </dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>Kubernetes(クバネティス)</dt>
+    <dd>コンテナのオーケストレーションツール。<br />
+      オーケストレーションツールとは、主に複数のコンテナを効率良く管理するための機能が備わったツールのこと。<br />
+      様々なコンテナが多数動作する環境において、使用するイメージ、コンテナへのCPUやメモリの割り当て、コンテナ停止時の復旧処理、パスワードなどの秘匿情報の管理、ストレージの割り当て、コンテナの稼働状況の監視など様々なことを考慮する必要が出てくるため、管理するのは難しくなる。<br />
+      Kuberntesはこういったコンテナ管理の機能を持ったソフトウェアであり、コンテナを管理するための設定ファイルを書くことで、様々なコンテナ管理の機能を利用することができる。
+    </dd>
 
     <dt></dt>
     <dd></dd>
