--- a/memo/section3.html
+++ b/memo/section3.html
@@ -70,6 +70,15 @@
   </ul>
 
   <h2>Windows版 DockerDesktopの動作確認</h2>
+
+  <ol>
+    <li>左下の検索窓でWindows PowerShellと入力し、PowerShellを起動。</li>
+    <li>PowerShellに<code>docker run hello-world</code>と入力して実行。<br />
+      これはhello-worldというイメージをダウンロードして そのイメージからコンテナを起動するコマンド。
+    </li>
+    <li>成功すると「Hello from Docker!」 から始まる英文が表示され、正しく動作していることがわかる。</li>
+  </ol>
+
 </body>
 
 </html>
