feat: セクション4を進めている

--- a/memo/glossary.html
+++ b/memo/glossary.html
@@ -135,6 +135,51 @@
       Kuberntesはこういったコンテナ管理の機能を持ったソフトウェアであり、コンテナを管理するための設定ファイルを書くことで、様々なコンテナ管理の機能を利用することができる。
     </dd>
 
+    <dt>レジストリ</dt>
+    <dd>Dockerの文脈では、リポジトリを管理する場所のことをレジストリと言います。<br />
+      リポジトリの作成など、リポジトリの管理機能を提供するサービスをレジストリサービスと言います。<br />
+      レジストリの機能を提供するサービスとしては、Docker HubやQuay.ioなどがあります。<br />
+      レジストリにDockerイメージを保存することで、異なる環境間にイメージを移送することが可能になります。
+    </dd>
+
+    <dt>リポジトリ</dt>
+    <dd>Dockerの文脈では、Dockerイメージを保管するための入れ物をリポジトリと言います。<br />
+      リポジトリにはタグ名の異なるイメージを複数保管することができます。
+    </dd>
+
+    <dt>タグ</dt>
+    <dd>イメージに付けることができるラベル名のことをタグと言います。<br />
+      タグは自由な名前を付けることができます。<br />
+      例えばプログラミング言語のイメージでは、バージョンを表すタグが付けられています。<br />
+      ruby:2.6というイメージの場合は、"ruby"イメージのタグ"2.6"という意味になります。<br />
+      これはRubyのバージョン2.6を含むイメージということになります。<br />
+      タグを明示しない場合は、latestというタグ名が使われます。
+    </dd>
+
+    <dt>ビルド</dt>
+    <dd>Dockerの文脈において、DockerfileからDockerイメージを作成することをビルドと言います。</dd>
+
+    <dt>ファイルシステム</dt>
+    <dd>コンピューター上でファイルを管理するための機能のことをファイルシステムといいます。通常ファイルシステムの機能はOSに備わっています。</dd>
+
+    <dt>ストレージドライバ</dt>
+    <dd>ハードディスクなどのストレージにデータを書き込むための機能を持ったソフトウェアのこと。<br />
+      ストレージドライバによってデータの書き込み形式や管理方法が異なります。
+    </dd>
+
+    <dt>AUFS</dt>
+    <dd>
+      Dockerで使用できるストレージドライバの一種です。<br />
+      Dockerの説明においてはファイルシステムの一種として解説されているものもあります。<br />
+      Dockerイメージをどのようにストレージに保持するのかを司るソフトウェアとしてAUFSという選択肢があるという風に理解していただければと思います。
+    </dd>
+
+    <dt>プル</dt>
+    <dd>リポジトリからイメージをダウンロードすることをプル（pull）と言います。</dd>
+
+    <dt>プッシュ</dt>
+    <dd>リポジトリにイメージをアップロードすることをプッシュ（push）と言います。</dd>
+
     <dt></dt>
     <dd></dd>
 
