--- a/memo/section3.html
+++ b/memo/section3.html
@@ -79,6 +79,16 @@
     <li>成功すると「Hello from Docker!」 から始まる英文が表示され、正しく動作していることがわかる。</li>
   </ol>
 
+  <h2>Mac版Docker Desktopのインストール</h2>
+
+  <ol>
+    <li><a href="https://www.docker.com/" target="_blank">Dockerの公式サイト</a>を開いて「Docker for
+      Mac(stable)」をクリックしてdocker.dmgというファイルをダウンロードし、ダブルクリックでインストール。</li>
+    <li>インストールが進んで「Configuration」の画面になったら「OK」をクリック。</li>
+    <li>インストールが完了して「Installation succeeded」の画面になったら、PCを再起動する。</li>
+    <li>再起動後にDockerのアプリケーションが自動で立ち上がり、Dockerを使えるようになる。</li>
+  </ol>
+
 </body>
 
 </html>
