feat: セクション4進め中

--- a/memo/section2.html
+++ b/memo/section2.html
@@ -5,6 +5,9 @@
 
   <h1>Dockerを理解する</h1>
 
+  <p>この記事はUdemyの<a href="https://www.udemy.com/course/docker-k/" target="_blank">「ゼロからはじめる
+      Dockerによるアプリケーション実行環境構築」</a>受講時の個人的なメモ書きです。</p>
+
   <h2>Dockerとは何か</h2>
   <ul>
     <li>コンテナ型仮装環境を作成、実行、管理するためのプラットフォーム</li>
