--- a/memo/glossary.html
+++ b/memo/glossary.html
@@ -136,49 +136,67 @@
     </dd>
 
     <dt>レジストリ</dt>
-    <dd>Dockerの文脈では、リポジトリを管理する場所のことをレジストリと言います。<br />
-      リポジトリの作成など、リポジトリの管理機能を提供するサービスをレジストリサービスと言います。<br />
-      レジストリの機能を提供するサービスとしては、Docker HubやQuay.ioなどがあります。<br />
-      レジストリにDockerイメージを保存することで、異なる環境間にイメージを移送することが可能になります。
+    <dd>Dockerの文脈では、リポジトリを管理する場所のこと。<br />
+      リポジトリの作成など、リポジトリの管理機能を提供するサービスをレジストリサービスと言う。<br />
+      レジストリの機能を提供するサービスとしては、Docker HubやQuay.ioなどがある。<br />
+      レジストリにDockerイメージを保存することで、異なる環境間にイメージを移送することが可能になる。
     </dd>
 
     <dt>リポジトリ</dt>
-    <dd>Dockerの文脈では、Dockerイメージを保管するための入れ物をリポジトリと言います。<br />
-      リポジトリにはタグ名の異なるイメージを複数保管することができます。
+    <dd>Dockerの文脈では、Dockerイメージを保管するための入れ物。<br />
+      リポジトリにはタグ名の異なるイメージを複数保管することができる。
     </dd>
 
     <dt>タグ</dt>
-    <dd>イメージに付けることができるラベル名のことをタグと言います。<br />
-      タグは自由な名前を付けることができます。<br />
-      例えばプログラミング言語のイメージでは、バージョンを表すタグが付けられています。<br />
-      ruby:2.6というイメージの場合は、"ruby"イメージのタグ"2.6"という意味になります。<br />
-      これはRubyのバージョン2.6を含むイメージということになります。<br />
-      タグを明示しない場合は、latestというタグ名が使われます。
+    <dd>イメージに付けることができるラベル名のこと。<br />
+      タグは自由な名前を付けることができる。<br />
+      例えばプログラミング言語のイメージでは、バージョンを表すタグが付けられている。<br />
+      ruby:2.6というイメージの場合は、"ruby"イメージのタグ"2.6"という意味になる。<br />
+      これはRubyのバージョン2.6を含むイメージということになる。<br />
+      タグを明示しない場合は、latestというタグ名が使われる。
     </dd>
 
     <dt>ビルド</dt>
-    <dd>Dockerの文脈において、DockerfileからDockerイメージを作成することをビルドと言います。</dd>
+    <dd>Dockerの文脈において、DockerfileからDockerイメージを作成することをビルドと言う。</dd>
 
     <dt>ファイルシステム</dt>
-    <dd>コンピューター上でファイルを管理するための機能のことをファイルシステムといいます。通常ファイルシステムの機能はOSに備わっています。</dd>
+    <dd>コンピューター上でファイルを管理するための機能のことをファイルシステムといいます。通常ファイルシステムの機能はOSに備わっている。</dd>
 
     <dt>ストレージドライバ</dt>
     <dd>ハードディスクなどのストレージにデータを書き込むための機能を持ったソフトウェアのこと。<br />
-      ストレージドライバによってデータの書き込み形式や管理方法が異なります。
+      ストレージドライバによってデータの書き込み形式や管理方法が異なる。
     </dd>
 
     <dt>AUFS</dt>
     <dd>
-      Dockerで使用できるストレージドライバの一種です。<br />
-      Dockerの説明においてはファイルシステムの一種として解説されているものもあります。<br />
-      Dockerイメージをどのようにストレージに保持するのかを司るソフトウェアとしてAUFSという選択肢があるという風に理解していただければと思います。
+      Dockerで使用できるストレージドライバの一種。<br />
+      Dockerの説明においてはファイルシステムの一種として解説されているものもある。<br />
+      Dockerイメージをどのようにストレージに保持するのかを司るソフトウェアとしてAUFSという選択肢がある。
     </dd>
 
-    <dt>プル</dt>
-    <dd>リポジトリからイメージをダウンロードすることをプル（pull）と言います。</dd>
+    <dt>プル（pull）</dt>
+    <dd>リポジトリからイメージをダウンロードすること。</dd>
 
-    <dt>プッシュ</dt>
-    <dd>リポジトリにイメージをアップロードすることをプッシュ（push）と言います。</dd>
+    <dt>プッシュ（push）</dt>
+    <dd>リポジトリにイメージをアップロードすること。</dd>
+
+    <dt>ローカル</dt>
+    <dd>相対的に見て、手元のPCやサーバーのこと。<br />
+      例えば、PC上にダウンロードしたイメージを指してローカルにあるイメージと言う。<br />
+      この場合、相対的に見てダウンロード元のインターネット上のリポジトリのことをリモートリポジトリと呼ぶことがる。<br />
+      このように手元の環境をローカル、ローカルから見て相手側をリモートと呼ぶ。
+    </dd>
+
+    <dt>エイリアス</dt>
+    <dd>別名のことをエイリアスと言う。<br />
+      例えば、実態としては1つのファイルでも、本来のファイル名とは別名で同じファイルを指すようにする場合、別名のことをエイリアスと言う。<br />
+      Windowsにおけるファイルやフォルダへのショートカットなども一種のエイリアスと言える。</dd>
+
+    <dt></dt>
+    <dd></dd>
+
+    <dt></dt>
+    <dd></dd>
 
     <dt></dt>
     <dd></dd>
