--- a/memo/section3.html
+++ b/memo/section3.html
@@ -5,6 +5,9 @@
 
   <h1>Dockerのインストール</h1>
 
+  <p>この記事はUdemyの<a href="https://www.udemy.com/course/docker-k/" target="_blank">「ゼロからはじめる
+    Dockerによるアプリケーション実行環境構築」</a>受講時の個人的なメモ書きです。</p>
+
   <h2>WindowsやMacでのLinuxコンテナの動き方</h2>
 
   <div>
