--- a/memo/section9.html
+++ b/memo/section9.html
@@ -4,6 +4,8 @@
 <body>
 
   <h1>Docker Compose</h1>
+  <p>この記事はUdemyの<a href="https://www.udemy.com/course/docker-k/" target="_blank">「ゼロからはじめる
+      Dockerによるアプリケーション実行環境構築」</a>受講時の個人的なメモ書きです。</p>
 
 
 </body>
