--- a/memo/glossary.html
+++ b/memo/glossary.html
@@ -192,14 +192,26 @@
       例えば、実態としては1つのファイルでも、本来のファイル名とは別名で同じファイルを指すようにする場合、別名のことをエイリアスと言う。<br />
       Windowsにおけるファイルやフォルダへのショートカットなども一種のエイリアスと言える。</dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>ビルドコンテキスト</dt>
+    <dd>Dockerイメージをビルドする際にDockerデーモンに送信するホストOS側のディレクトリのこと。<br />
+      ホストOS側に置いてあるファイルをDockerイメージに内包する場合は、ビルドコンテキスト上にファイルが存在する必要がある。<br />
+      ビルドコンテキスト上のファイルはビルド時に全てDockerデーモンに送信されるため、ビルド時間が長くならないよう、ビルドに不要なファイルは含めないことが推奨されている。<br />
+      ビルドコンテキストのファイルが全てイメージに取り込まれる訳ではないので注意が必要。<br />
+      あくまで一時的にDockerデーモンに送信されるだけで、どのファイルをイメージに含めるかどうかはDockerfileに定義する。
+    </dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>Dockerfile</dt>
+    <dd>Dockerイメージを作成するための指示書となる設定ファイル。<br />
+      DockerではデフォルトでDockerfileという名前のファイルがイメージのビルドに使用される。<br />
+      別名のDockerfileを使用することも可能。<br />
+      Dockerでビルドを行った場合、Dockerfileに定義された内容を上から順に処理していき、最終的な状態の環境がDockerイメージとして保存される。
+    </dd>
 
-    <dt></dt>
-    <dd></dd>
+    <dt>ビルドキャッシュ</dt>
+    <dd>Dockerイメージをビルドした際に、イメージのレイヤーごとにビルド結果がキャッシュ（一時保存）される。<br />
+      Dockerfileを元にしたビルド内容に差がない場合、2回目以降のビルドした場合はこのビルドキャッシュが使用されるため、初回よりも早くビルドが完了する。<br />
+      Dockerfileに変更があったり、関連するファイルに差があった場合は、ビルドキャッシュが使用されずに再度ビルドが行われる。
+    </dd>
 
     <dt></dt>
     <dd></dd>
