--- a/memo/section4.html
+++ b/memo/section4.html
@@ -392,8 +392,10 @@
     exsists」になっているのは、「my_whalesay」という名前で「docker/whalesay」と全く同じレイヤーを持つイメージがローカルに存在するためです。
   </p>
 
+  <h2>Dockerfileを使用したイメージビルドの方法</h2>
 
-
+  <p>イメージを構築するにはDockerファイルというイメージの定義ファイルを作成します。<br />
+    Dockerファイルからイメージを構築することをイメージビルドといいます。</p>
 
 
 
